Avoid apt-key deprecation warning

--- a/roles/cklein.chrome/tasks/main.yaml
+++ b/roles/cklein.chrome/tasks/main.yaml
@@ -8,6 +8,7 @@
   apt_key:
     id: 4CCA1EAF950CEE4AB83976DCA040830F7FAC5991
     url: https://dl-ssl.google.com/linux/linux_signing_key.pub
+    keyring: /etc/apt/trusted.gpg.d/google.gpg
 
 - name: "apt | ensure Google chrome repo present"
   become: true
