--- a/roles/cklein.vscode/tasks/main.yaml
+++ b/roles/cklein.vscode/tasks/main.yaml
@@ -15,6 +15,7 @@
   apt_key:
     id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
     url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    keyring: /etc/apt/trusted.gpg.d/microsoft.gpg
 
 - name: install VS Code repo (apt)
   become: yes
