--- a/roles/cklein.docker/tasks/main.yaml
+++ b/roles/cklein.docker/tasks/main.yaml
@@ -12,6 +12,7 @@
   apt_key:
     id: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
     url: "https://download.docker.com/linux/ubuntu/gpg"
+    keyring: /etc/apt/trusted.gpg.d/docker.gpg
 
 - name: Add Docker repository
   become: true
