--- a/roles/cklein.dotnet/tasks/main.yml
+++ b/roles/cklein.dotnet/tasks/main.yml
@@ -9,6 +9,7 @@
   apt_key:
     id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
     url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    keyring: /etc/apt/trusted.gpg.d/microsoft.gpg
 
 - name: Add Microsoft repository
   become: true
