--- a/roles/cklein.hugo/tasks/main.yaml
+++ b/roles/cklein.hugo/tasks/main.yaml
@@ -3,8 +3,16 @@
     url: https://github.com/gohugoio/hugo/releases/download/v{{ hugo_version }}/hugo_{{ hugo_version }}_Linux-64bit.deb
     dest: /tmp/hugo_{{ hugo_version }}.deb
     mode: 0600
+  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int <= 20
 
 - name: Install hugo
   become: true
   apt:
     deb: /tmp/hugo_{{ hugo_version }}.deb
+  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int <= 20
+
+- name: Install hugo
+  become: true
+  apt:
+    pkg: hugo
+  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int > 20
