Make krew plugin installation idempotent

--- a/roles/cklein.cncf/defaults/main.yaml
+++ b/roles/cklein.cncf/defaults/main.yaml
@@ -10,4 +10,5 @@ terraform_version: 1.1.4
 sops_version: 3.7.1
 
 krew_plugins:
-  - oidc-login
+  - name: oidc-login
+    creates: ~/.krew/bin/kubectl-oidc_login
