--- a/roles/cklein.cloud_tools/tasks/azure.yaml
+++ b/roles/cklein.cloud_tools/tasks/azure.yaml
@@ -1,32 +1,7 @@
-- name: Install prerequisites
-  become: true
-  apt:
-    pkg:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - lsb-release
-      - gnupg
-      - software-properties-common
-
-- name: Add Microsoft key
-  become: true
-  apt_key:
-    id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
-    url: 'https://packages.microsoft.com/keys/microsoft.asc'
-    keyring: /etc/apt/trusted.gpg.d/microsoft.gpg
-
 - name: Add Microsoft repository
   become: true
   apt_repository:
-    repo: deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main
-  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int <= 20
-
-- name: Add Microsoft repository
-  become: true
-  apt_repository:
-    repo: deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ focal main
-  when: ansible_lsb.id == "Ubuntu" and ansible_lsb.major_release|int > 20
+    repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main
 
 - name: Install Azure CLI
   become: true
