Add role to install fonts

--- a/site.yml
+++ b/site.yml
@@ -28,6 +28,7 @@
     - cklein.docker
     - cklein.dotnet
     - cklein.dropbox
+    - cklein.fonts
     - cklein.git
     - cklein.go
     - cklein.hugo
