--- a/site.yml
+++ b/site.yml
@@ -48,6 +48,7 @@
     - cklein.terminator
     - cklein.vscode
     - cklein.vim
+    - cklein.webcam_fix
     - cklein.tmp_on_tmpfs
     - cklein.zoom
     # Best to run after all favorite apps are installed
