--- a/roles/cklein.fonts/tasks/main.yaml
+++ b/roles/cklein.fonts/tasks/main.yaml
@@ -8,8 +8,11 @@
 
 - name: Install Google Fonts
   ansible.builtin.unarchive:
-    src: 'https://fonts.google.com/download?family={{ item }}'
+    src: 'https://fonts.google.com/download?family={{ item | urlencode }}'
     dest: '~/.local/share/fonts/{{ item }}'
+    # Regarding the `creates` below, strictly speaking, this file is created by the
+    # font cache handler.
+    creates: '~/.local/share/fonts/{{ item }}/.uuid'
     remote_src: yes
   with_items: '{{ fonts_google_families }}'
   tags:
