--- a/roles/cklein.cloud_tools/tasks/multi_cloud.yaml
+++ b/roles/cklein.cloud_tools/tasks/multi_cloud.yaml
@@ -1,4 +1,9 @@
+- name: Download rclone.deb
+  get_url:
+    url: https://downloads.rclone.org/v1.65.0/rclone-v1.65.0-linux-amd64.deb
+    dest: /tmp/rclone.deb
+
 - name: Install rclone
   become: true
   apt:
-    name: rclone
+    deb: /tmp/rclone.deb
