--- a/roles/cklein.chrome/tasks/main.yaml
+++ b/roles/cklein.chrome/tasks/main.yaml
@@ -1,11 +1,4 @@
-- name: "apt | ensure Google chrome repo present"
+- name: "Install Google Chrome"
   become: true
-  apt_repository:
-    repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/google.gpg] http://dl.google.com/linux/chrome/deb/ stable main"
-    filename: "google-chrome"
-    update_cache: yes
-
-- name: "apt | ensure Google chrome present"
-  become: true
-  apt:
-    name: "google-chrome-stable"
+  ansible.builtin.apt:
+    deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
