--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -106,5 +106,5 @@ gnome_favorite_apps:
   - org.keepassxc.KeePassXC.desktop
 signature: |
   Cristian Klein, PhD
-  Senior Cloud and Information Security Architect
+  Product Owner and DPO
   www.elastisys.com
