--- a/roles/cklein.git/tasks/main.yaml
+++ b/roles/cklein.git/tasks/main.yaml
@@ -5,6 +5,7 @@
       - git-crypt
       - git-lfs
       - gitk
+      - pre-commit
   become: true
 
 - name: Remove ~/.gitconfig
@@ -21,12 +22,6 @@
   template:
     src: gitconfig.j2
     dest: ~/.config/git/config
-
-- name: Install pre-commit
-  pip:
-    name:
-      - pre-commit ~= {{ precommit_version_match }}
-    state: latest
 
 - name: Install git-checkall
   template:
