--- a/roles/cklein.python/tasks/main.yaml
+++ b/roles/cklein.python/tasks/main.yaml
@@ -2,11 +2,5 @@
   become: true
   apt:
     name:
+      - pylint
       - python3-venv
-
-- name: Install python3 development tools (via pip)
-  pip:
-    name:
-      - pylint ~= {{ pylint_version_match }}
-      - pipfile
-    state: latest
