Update ansible.cfg to latest Ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,8 +4,7 @@ ansible_managed=DO NOT EDIT! This file is managed by Ansible.%n
   date: %Y-%m-%d %H:%M:%S
   user: {uid}
   host: {host}
-ansible_python_interpreter=/usr/bin/python3
-callback_enabled = profile_tasks
+callbacks_enabled = ansible.posix.profile_tasks
 stdout_callback = debug
 local_tmp = /tmp/.ansible/tmp
 remote_tmp = /tmp/.ansible/tmp
