Fix some liniting issues

--- a/roles/cklein.slack/tasks/main.yaml
+++ b/roles/cklein.slack/tasks/main.yaml
@@ -1,7 +1,8 @@
+---
 - name: Install Slack
   become: true
-  snap:
+  community.general.snap:
     name: slack
-    classic: yes
+    classic: true
   tags:
     - snap
