--- a/roles/cklein.tmp_on_tmpfs/tasks/main.yaml
+++ b/roles/cklein.tmp_on_tmpfs/tasks/main.yaml
@@ -1,5 +1,6 @@
-- name: mount tmpfs as /tmp
-  mount:
+---
+- name: Mount tmpfs as /tmp
+  ansible.posix.mount:
     path: /tmp
     src: tmpfs
     fstype: tmpfs
