--- a/roles/cklein.remote_unlock_encrypted_volume/handlers/main.yml
+++ b/roles/cklein.remote_unlock_encrypted_volume/handlers/main.yml
@@ -1,4 +1,5 @@
 ---
 - name: Update initramfs
-  command: update-initramfs -u
+  ansible.builtin.command: update-initramfs -u
+  changed_when: true
   become: true
