--- a/roles/cklein.c/tasks/main.yaml
+++ b/roles/cklein.c/tasks/main.yaml
@@ -1,29 +1,26 @@
+---
 - name: Install development tools
-  apt:
+  ansible.builtin.apt:
     name:
-    - build-essential
-    - ccache
-    - libtext-markdown-perl
-    - meld
-    - sloccount
-    - subversion
+      - build-essential
+      - ccache
+      - libtext-markdown-perl
+      - meld
+      - sloccount
+      - subversion
   become: true
-  tags:
-    - c
 
 - name: Create configuration folders
-  file:
+  ansible.builtin.file:
     path: ~/.ccache
     state: directory
     recurse: true
-  tags:
-    - c
+    mode: '0700'
 
 - name: Copy configuration files
-  template:
+  ansible.builtin.template:
     src: '{{ item | basename | regex_replace("^[.]") }}.j2'
     dest: '{{ item }}'
+    mode: '0644'
   loop:
     - ~/.ccache/ccache.conf
-  tags:
-    - c
