--- a/roles/cklein.cncf/tasks/main.yaml
+++ b/roles/cklein.cncf/tasks/main.yaml
@@ -12,7 +12,7 @@
 - name: Install krew
   ansible.builtin.shell: |
     (
-      set -x; cd "$(mktemp -d)" &&
+      set -xo pipefail; cd "$(mktemp -d)" &&
       OS="$(uname | tr '[:upper:]' '[:lower:]')" &&
       ARCH="$(uname -m | sed -e 's/x86_64/amd64/' -e 's/\(arm\)\(64\)\?.*/\1\2/' -e 's/aarch64$/arm64/')" &&
       KREW="krew-${OS}_${ARCH}" &&
@@ -21,6 +21,7 @@
       ./"${KREW}" install krew
     )
   args:
+    executable: /bin/bash
     creates: ~/.krew/bin
 
 - name: Install krew plugins
@@ -36,7 +37,7 @@
     src: https://get.helm.sh/helm-v{{ helm_version }}-linux-amd64.tar.gz
     dest: ~/bin
     creates: ~/bin/helm
-    remote_src: yes
+    remote_src: true
     extra_opts:
       - --strip-components=1
       - --wildcards
@@ -47,15 +48,9 @@
     src: https://releases.hashicorp.com/terraform/{{ terraform_version }}/terraform_{{ terraform_version }}_linux_amd64.zip
     dest: ~/bin
     creates: ~/bin/terraform
-    remote_src: yes
-
-- name: Download sops.deb
-  ansible.builtin.get_url:
-    url: https://github.com/getsops/sops/releases/download/v{{ sops_version }}/sops_{{ sops_version }}_amd64.deb
-    dest: /tmp/
-    mode: 0600
+    remote_src: true
 
 - name: Install sops
   become: true
   ansible.builtin.apt:
-    deb: /tmp/sops_{{ sops_version }}_amd64.deb
+    name: sops
