--- a/roles/cklein.cloud_tools/tasks/multi_cloud.yaml
+++ b/roles/cklein.cloud_tools/tasks/multi_cloud.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Install useful multi-cloud tools
   become: true
-  apt:
+  ansible.builtin.apt:
     name:
       - rclone
       - s3cmd
