--- a/roles/cklein.dictionaries/tasks/main.yaml
+++ b/roles/cklein.dictionaries/tasks/main.yaml
@@ -1,6 +1,7 @@
+---
 - name: Install dictionaries
   become: true
-  apt:
+  ansible.builtin.apt:
     name: '{{ dictionaries }}'
   tags:
     - dictionaries
